# AlgoLib

./: .travis.yml  CMakeLists.txt  Makefile  README.md  check_requirements.py  generate_test_data.sh  requirements.json
cmake/: check.cmake  compiler_deps.cmake  flags.cmake  prevent_in_source_builds.cmake  set_runtime_output_directory.cmake
ext/: CMakeLists.txt
lib/: test.hpp
lib/sorting/: counting_sort.hpp
py_utils/: os_utils.py  tests_hpp_generator.py
src/sorting/: counting_sort.hpp
test/: CMakeLists.txt  test.cpp
test/sorting/: CMakeLists.txt  sorting_tests_generator.py  test_counting_sort.cpp  tests_generator.py  unittest_counting_sort.cpp
